syntax = "proto3";

package parameters;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


service Parameters {
    rpc Get (GetParameterRootRequest) returns (ParameterRoot) {
        option (google.api.http) = {
            get: "/v1/operators/{operator_id}/parameters"
        };
    }
    rpc Create (CreateParameterRootRequest) returns (ParameterRoot) {
        option (google.api.http) = {
            post: "/v1/operators/{operator_id}/parameters"
            body: "parameter_root"
        };
    }
    rpc Update (UpdateParameterRootRequest) returns (ParameterRoot) {
        option (google.api.http) = {
            put: "/v1/operators/{operator_id}/parameters"
            body: "parameter_root"
        };
    }
    rpc Delete (DeleteParameterRootRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/operators/{operator_id}/parameters"
        };
    }
}

message ParameterRoot {
    string operator_id = 1;
    bytes children = 2;
    repeated string order = 3;
}

message GetParameterRootRequest {
    string operator_id = 1;
}

message CreateParameterRootRequest {
    string operator_id = 1;
    ParameterRoot parameter_root = 2;
}

message UpdateParameterRootRequest {
    string operator_id = 1;
    ParameterRoot parameter_root = 2;
}

message DeleteParameterRootRequest {
    string operator_id = 1;
}
